--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+    <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico?v=dLJjrPevy9">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png?v=dLJjrPevy9">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png?v=dLJjrPevy9">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>img/icons/apple-touch-icon.png?v=dLJjrPevy9">
+    <link rel="manifest" href="<%= BASE_URL %>manifest.json?v=dLJjrPevy9">
+    <link rel="mask-icon" href="<%= BASE_URL %>img/icons/safari-pinned-tab.svg?v=dLJjrPevy9" color="#343b3f">
+    <meta name="apple-mobile-web-app-title" content="CodeZest">
+    <meta name="application-name" content="CodeZest">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="stylesheet" href="<%= BASE_URL %>fonts/font.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>CodeZest</title>
