Added ontouchstart for iOS device

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>CodeZest</title>
 </head>
-<body>
+<body ontouchstart="">
 <noscript>
     <strong>
         We're sorry but CodeZest doesn't work properly without JavaScript enabled. Please enable it to continue.
